--- a/proportal/views/inc/title/scaffold.tt
+++ b/proportal/views/inc/title/scaffold.tt
@@ -1,6 +1,7 @@
 [%	PROCESS 'inc/generic/link.tt';
+	surtitle = 'scaffold' | ucfirst;
 	article_title = self.scaffold_name;
-	subtitle = 'from ' _ taxon_name_link( x = {}, obj = self );
+	subtitle = 'from ' _ taxon_name_link( {}, self );
 
 	button = {
 		cart => {
